--- a/mangobord/css/style.css
+++ b/mangobord/css/style.css
@@ -64,7 +64,7 @@ body{font-family: Arial, Helvetica, sans-serif;}
 .banner-title .b-title-left .text-bold .color-y{color: #f9c200;}
 .banner-title .b-title-right{ flex: 0 1 35%; height: auto; padding: 2rem ; box-sizing: border-box;}
 .banner-title .b-title-right h3{ color: #454545; font-size: 17px; margin-bottom:28px ; font-weight: bold; }
-.banner-title .b-title-right .news-wraps{ position: relative; width: 100%; height: 96px ; background: red; overflow: hidden;}
+.banner-title .b-title-right .news-wraps{ position: relative; width: 100%; height: 96px ;  overflow: hidden;}
 .banner-title .b-title-right .news-wraps .news-wrap{ position: absolute; top:100%; width: 100%;}
 .banner-title .b-title-right .news-wraps .news-wrap:nth-child(1){position: absolute;top: 0;}
 .banner-title .b-title-right .news-wraps .news-wrap p .text{ font-size: 17px;display: block; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;}
